# potosio_office

./: .gitignore  LICENSE  README.md  collection of db tools.xlsx  dist.sql  divi.sql  nnn.txt  package-lock.json  pyproject.toml  testjjj.sql  union.sql  upa.sql
potosio/: manage.py
potosio/potosio/: asgi.py  schema.py  settings.py  urls.py  wsgi.py
potosio/potosioBackend/: admin.py  apps.py  models.py  schema.py  urls.py  views.py
potosio/potosioBackend/migrations/: 0001_initial.py  0002_alter_photographerprofile_options.py  0002_auto_20211211_1503.py
potosio/users/: models.py  schema.py
potosio/users/migrations/: 0001_initial.py
