[tool.poetry]
name = "potosio_office"
version = "0.1.1"
description = "backend of potosio"
authors = ["blackboxsql <pythonboy007@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
